// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with all data 1`] = `
"<div class="toolbar__item">
    <span class="version">
        <a href="https://example.net/pull-requests/123">PR 123</a>
        feature/foobar (<a href="https://example.net/commits/c0ffee">c0ffee</a>)<br />
        1999-12-31 13:37:00
    </span>
</div>
"
`;

exports[`should render correctly without PR data 1`] = `
"<div class="toolbar__item">
    <span class="version">
        
        feature/foobar (<a href="https://example.net/commits/c0ffee">c0ffee</a>)<br />
        1999-12-31 13:37:00
    </span>
</div>
"
`;

exports[`should render correctly without scm data 1`] = `
"<div class="toolbar__item">
    <span class="version">
        1.2.3
    </span>
</div>
"
`;
